# b2b-lead-scoring-model-serving

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  deploy-infrastructure.yml
alertmanager/: alertmanager.yml
api/: main.py
api/app/: datalake.py  endpoint_client.py  model.py
api/middleware/: auth.py  logging_middleware.py  metrics.py
api/routes/: health.py  scoring.py
api/schemas/: lead_features.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FEATURES.md  LOAD_TESTING.md  MONITORING.md  OPERATIONS.md  README.md  SCRIPTS.md
docs/examples/: sample_request_1.json  sample_request_2.json  sample_request_3.json  sample_response.json
grafana/provisioning/dashboards/: dashboard.yml  lead-scoring-dashboard.json
grafana/provisioning/datasources/: prometheus.yml
infra/config/: environments.json
infra/terraform/: .gitignore  README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/aws/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/azure/: main.tf  outputs.tf  variables.tf
prometheus/: prometheus.yml
prometheus/rules/: alerts.yml
scripts/: entrypoint.sh  quick_test.sh  setup-github-secrets.sh  start-monitoring.ps1  start-monitoring.sh  validate-deployment.ps1  validate-deployment.sh
tests/integration/: test_scoring_integration.py
tests/load/: locustfile.py
tests/unit/: test_api.py  test_datalake.py  test_model.py
